# PyPDE

./: .gitignore  CMakeLists.txt  README.md  README.rst  main.py  requirements.txt  setup.py  setup2.py  test.cpp  test.py
.github/workflows/: main.yml
docs/: conf.py  index.rst
docs/_theme/scipy/: layout.html  theme.conf
docs/_theme/scipy/static/css/: extend.css  scipy-central.css  spc-bootstrap.css
docs/pages/: background.rst  core_functionality.rst  example_code.rst  example_pdes.rst  installation.rst
examples/: exact.py
examples/euler/: tests.py
examples/gpr/: params.py  system.py  tests.py
examples/gpr/misc/: eos.py  functions.py  mg.py  sources.py  state.py  utils.py
examples/navier_stokes/: system.py  tests.py
examples/reactive_euler/: system.py  tests.py
images/: equations.lyx
include/: ThreadPool.h
include/Spectra/: GenEigsBase.h  GenEigsComplexShiftSolver.h  GenEigsRealShiftSolver.h  GenEigsSolver.h  SymEigsBase.h  SymEigsShiftSolver.h  SymEigsSolver.h  SymGEigsSolver.h
include/Spectra/LinAlg/: Arnoldi.h  BKLDLT.h  DoubleShiftQR.h  Lanczos.h  TridiagEigen.h  UpperHessenbergEigen.h  UpperHessenbergQR.h
include/Spectra/MatOp/: DenseCholesky.h  DenseGenComplexShiftSolve.h  DenseGenMatProd.h  DenseGenRealShiftSolve.h  DenseSymMatProd.h  DenseSymShiftSolve.h  SparseCholesky.h  SparseGenMatProd.h  SparseGenRealShiftSolve.h  SparseRegularInverse.h  SparseSymMatProd.h  SparseSymShiftSolve.h
include/Spectra/MatOp/internal/: ArnoldiOp.h  SymGEigsCholeskyOp.h  SymGEigsRegInvOp.h
include/Spectra/Util/: SimpleRandom.h  TypeTraits.h
include/Spectra/contrib/: LOBPCGSolver.h  PartialSVDSolver.h
pypde/: __init__.py  ader.py  cfuncs.py  solvers.py  utils.py  weno.py
pypde/tests/: __init__.py
pypde/tests/euler/: __init__.py  system.py
pypde/tests/gpr/: __init__.py  system.py
pypde/tests/gpr/misc/: eos.py  mg.py  sources.py  state.py  utils.py
pypde/tests/navier_stokes/: __init__.py
pypde/tests/reactive_euler/: __init__.py
src/: ader.cpp  ader.h  api.cpp  api.h  main.cpp  test.cpp  types.h
src/eigs/: CustomMatProd.h  NumericalDiff.h  system.cpp  system.h
src/etc/: CustomMatProd.h  NumericalDiff.h  grid.cpp  grid.h  indexing.cpp  indexing.h  system.cpp  system.h  types.h
src/grid/: boundaries.cpp  boundaries.h  indexing.cpp  indexing.h
src/poly/: basis.cpp  basis.h  evaluations.cpp  evaluations.h
src/scipy/: legendre.cpp  legendre.h  lgmres.cpp  lgmres.h  newton_krylov.cpp  newton_krylov.h  poly.cpp  poly.h
src/scipy/algos/: lgmres.cpp  lgmres.h  newton_krylov.cpp  newton_krylov.h
src/scipy/math/: legendre.cpp  legendre.h  polynomials.cpp  polynomials.h
src/scipy/python/: lgmres.py  newton_krylov.py  newton_krylov2.py
src/solvers/: iterator.cpp  iterator.h  stepper.cpp  stepper.h
src/solvers/dg/: dg.cpp  dg.h  dg_matrices.cpp  dg_matrices.h
src/solvers/fv/: fluxes.cpp  fluxes.h  fv.cpp  fv.h
src/solvers/poly/: basis.cpp  basis.h  evaluations.cpp  evaluations.h
src/solvers/weno/: weno.cpp  weno.h  weno_matrices.cpp  weno_matrices.h
src/tests/: __init__.py  euler.py
testing/: euler.py  reactive_euler.py
testing/gpr/: __init__.py  params.py  system.py  tests.py
testing/gpr/misc/: eos.py  functions.py  mg.py  sources.py  state.py
testing/navier_stokes/: __init__.py  system.py
tests/: euler.py  reactive_euler.py  test.cpp
